# SurpriseLearner

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  VSCode-User.lnk  changelog.md  notes.txt  project.txt  pyproject.toml  requirements-aspirational.txt  requirements.txt  settings.json - Shortcut.lnk  setup.cfg  setup.py  surprise-learning-exploration-exploitation.code-workspace
.copilot/: .copilot-structure.txt  CopiloProstheticMemory part 1 with copilot deepthink.txt  CopiloProstheticMemory part 2 with GPT5.txt  QUICK_REFERENCE.md  README.md  REPO_GUIDELINES.md  corpus-registry.json
.copilot/_expertise/: WSL-commands-cheat-sheet.md  pytorch_python_api.md
.copilot/_fixing/: organize.py
.copilot/_instructions/: ProjectSnapshot.json
.copilot/assignments/: Phase 1 Instruction Set.txt  Phase 3 - MNIST demo - updates.txt
.copilot/core/: CopilotConsoleEnhancments.ps1  CopilotFileSystemInfrastructure.ps1  CopilotLoggingMemorySystem.ps1  CopilotSelfMonitoringSystem.ps1
.copilot/helpers/: ArchiveFIleExtractionHelpers.ps1  Export-CopilotChatLogs.ps1  Invoke-IsolatedSubInstance.ps1  Invoke-WithTempEnv.ps1  PSLinter.ps1  RepoSnapshot.psm1
.copilot/helpers/fixing/: fix_formatting.py
.copilot/helpers/organize/: README.md
.copilot/helpers/testing/: README.md
.copilot/startup/: MemoryOrchestrationEngine.ps1  PrimaryEnvProfileNew.ps1  SmartProfileStartupUtils.ps1  VSCode.Copilot.Profile.ps1  VSCode.SmartProfileLoader.ps1  vscode_copilot_settings-current.json
.github/: consolidated.txt  copilot-instructions.md
.github/instructions/: memory-overview-needs-refactor.txt  memory.instructions.md  powershell.instructions.md  python-ml-models.instructions.md
.github/workflows/: ci.yml
.ignore/.copilot/: gitattributes.md  implementation_checklist.md
.ignore/.copilot/assignments/: Pytorch instrunctions scratch.txt
.ignore/.copilot/helpers/: powershell-standards.ps1
.ignore/.copilot/helpers/diagnostics/: README.md  format_scanner.py
.ignore/.copilot/helpers/fixing/: README.md  RefactorCleanup.ps1
.snapshot/: SurpriseLearner_20250802_121001.json  SurpriseLearner_20250805_000857.json  SurpriseLearner_20250805_003354.json  SurpriseLearner_20250808_023804.json
_chatbot/: GRRI Method Overview WIP.md  QUICK_REFERENCE.md  README.md  REPO_GUIDELINES.md
_chatbot/_diagnostics/: cicd_check.py
_chatbot/_exports/: _current_repo_0.01.0.json
_chatbot/_fixing/: organize.py
_chatbot/_instructions/: SeniorPyDevOps.persona  copilot365 infra.txt  final_hardening_20250713.md  repo-cleanup-part-2.md  repo_cleanup_20250713.txt
_chatbot/_testing/: comprehensive_test.py  run_specific_tests.py  test_particle_filter.py
_chatbot/debugging/: test_scene_debug.py
_chatbot/reporting/refactor/: repo-cleanup-part1_report.md
_chatbot/validation/: validate_build.py
adaptive_bayesian_driver/: __init__.py  config.py
adaptive_bayesian_driver/applications/: __init__.py
adaptive_bayesian_driver/environment/: __init__.py
adaptive_bayesian_driver/models/: RecursiveBayesianLearner.py  __init__.py
adaptive_bayesian_driver/utils/: Export-JsonRepo.ps1  __init__.py  compute_optimizations.py  demo.py  device.py  visualization.py
config/: experiment.yaml
docs/original_materials/: bayesianlearner3.m
src/models/: RecursiveBayesianLearner.py  utils_particle.py
tests/: .env  Dockerfile  test_environment.py  test_recursive_bayes.py
