[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_bayesian_driver"
version = "1.0.0"
description = "A recursive Bayesian learning system with surprise detection for autonomous driving, based on the LC-NE neuroscience framework."
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "Pillow>=8.0.0",
    "PyYAML>=5.4.0",
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "black>=21.0",
    "jupyter>=1.0.0",
    "seaborn>=0.11.0"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    "myst-parser>=0.15"
]

[project.scripts]
adaptive-bayesian-driver = "adaptive_bayesian_driver.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/adaptive-bayesian-driver"
Documentation = "https://adaptive-bayesian-driver.readthedocs.io/"
Repository = "https://github.com/yourusername/adaptive-bayesian-driver.git"
"Bug Tracker" = "https://github.com/yourusername/adaptive-bayesian-driver/issues"

[tool.setuptools.packages.find]
include = ["adaptive_bayesian_driver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "scipy.*",
    "sklearn.*",
    "PIL.*",
    "torchvision.*"
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
