[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-bayesian-driver"
version = "0.1.0"
description = "LC-NE inspired adaptive Bayesian learning for autonomous driving"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "pillow>=9.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

aspirational = [
    "mlflow>=2.13.0",
    "hydra-core>=1.3.0",
    "wandb>=0.17.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "onnx>=1.16.0",
    "onnxruntime-gpu>=1.18.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/adaptive-bayesian-driver"
"Bug Reports" = "https://github.com/yourusername/adaptive-bayesian-driver/issues"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--cov=adaptive_bayesian_driver"]
