[metadata]
name = adaptive-bayesian-driver
description = LC-NE inspired adaptive Bayesian learning for autonomous driving
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Your Name
author_email = your.email@example.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = adaptive_bayesian_driver*
exclude = tests*

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-cov>=5.0.0
    ruff>=0.4.4
    mypy>=1.10.0
    pre-commit>=3.7.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.eggs

[coverage:run]
source = adaptive_bayesian_driver
omit =
    */tests/*
    */test_*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
